...
    <string name="title_dictionary">Dictionary</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_photo">Photo</string>
    <string name="title_profile">Profile</string>


    <string name="str_logout">Log Out</string>
    <string name="str_delete_user">Delete User</string>
    <string name="str_edit_profile">Edit Profile</string>

    <string name="str_warning">Warning</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>

    <string name="str_generic_error">There is a problem. Try later</string>

    <string name="str_generic_backend_error">There is a problem with connection. Try later</string>

    <!-- start region - onboard -->
...
    <string name="str_surname_hint">Surname</string>
    <string name="str_mail_hint">E-Mail</string>
    <string name="str_password_hint">Password</string>
    <string name="str_repeat_password_hint">Repeat Password</string>
    <string name="str_login_text">Do you already have an account?</string>
    <string name="str_signup_text">You don\'t have an account?</string>
    <string name="str_login_button">Log In</string>
    <string name="str_forgot_password"><u>Password Forgotten?</u></string>
    <string name="str_password_no_match">Passwords do not match!</string>
    <string name="str_no_mail">Please, insert a valid e-mail.</string>
    <string name="str_credential_not_valid">Credential is not valid.</string>
    <string name="str_no_password">Please, insert a valid password.</string>
    <string name="str_password_not_valid">Specified password is not valid. The password must contains at least 8 characters, one lower-case, one upper-case, one number and one special character. It cannot contains spaces.</string>
    <string name="str_no_repeat_password">Please, repeat the password.</string>
    <string name="str_signup_network_error">There is a problem. Check your internet connectivity and retry.</string>
    <string name="str_mail_already_in_use_error">This e-mail is already in use. Try another one</string>
    <string name="str_password_weak_error">Specified password is too weak.</string>
    <string name="str_onboard_success">Onboard successfully completed. You will be redirected to Dashboard.</string>
    <string name="str_check_onboard">Checking your Data. Please Wait …</string>
...
    <!-- fine regione - photo -->

    <!-- inizio regione - profilo -->

    <string name="str_no_user">Mail not found!</string>
    <string name="str_login_too_old">This operation is very sensitive. Before performing it, please verify your identity by logging out and execute login.</string>
    <string name="str_delete_user_confirmation">Do you really want to delete your account? This operation cannot be reverted.</string>
    <string name="str_current_password_hint">Current Password</string>
    <string name="str_new_password_hint">New Password</string>
    <string name="str_change_password">Change Password</string>
    <string name="str_change_password_equal">New password is equal to current.</string>
    <string name="str_edit_profile_message">For now, in the edit section you can only change your password. If you successfully change your password, you will be logged out. Click OK if you want to continue.</string>
    <string name="str_total_answers">Total Answers</string>
    <string name="str_correct_answers">Correct Answers</string>
    <string name="str_wrong_answers">Wrong Answers</string>
    <string name="str_quiz_score">Quiz Score</string>
    <string name="str_percentage">%s\%%</string>
    <string name="str_total_answers_number">Total: %s</string>
    <string name="str_correct_answers_number">Correct: %s</string>
    <string name="str_wrong_answers_number">Wrong: %s</string>
    <string name="str_show_quizzes">Show Quizzes</string>
    <string name="str_total_zero">Total: 0</string>
    <string name="str_correct_zero">Correct: 0</string>
    <string name="str_wrong_zero">Wrong: 0</string>

    <!-- fine regione - profilo -->

</resources>
