...
            <ProgressBar
                android:id="@+id/deleteUserProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/deleteUserButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteUserButton"
...
                            app:layout_constraintEnd_toStartOf="@+id/answersConstraintLayoutCounter"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/progressText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@+id/counterProgressBar"
                            android:textColor="@color/progress_text_color"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toBottomOf="@+id/counterProgressBar"
...
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/counterProgressBar"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/textViewTotalAnswers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="@string/str_total_answers"
                                android:textSize="16sp"
                                app:layout_constraintBottom_toTopOf="@+id/textViewCorrectAnswers"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/textViewCorrectAnswers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="@string/str_correct_answers"
                                android:textSize="16sp"
                                app:layout_constraintBottom_toTopOf="@+id/textViewWrongAnswers"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textViewTotalAnswers" />

                            <TextView
...
