...
                    app:layout_constraintTop_toTopOf="parent"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_key_24dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputEditTextOldPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_current_password_hint"
                        android:inputType="textPassword"
                        android:imeOptions="flagNoExtractUi" />
                </com.google.android.material.textfield.TextInputLayout>
...
                    app:layout_constraintTop_toBottomOf="@id/inputLayoutOldPassword"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_key_24dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputEditTextNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_new_password_hint"
                        android:inputType="textPassword"
                        android:imeOptions="flagNoExtractUi" />
                </com.google.android.material.textfield.TextInputLayout>
...
                    app:layout_constraintTop_toBottomOf="@id/inputLayoutNewPassword"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_key_24dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputEditTextRepeatNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_repeat_password_hint"
                        android:inputType="textPassword"
                        android:imeOptions="flagNoExtractUi" />
                </com.google.android.material.textfield.TextInputLayout>
...
                android:visibility="@{isLoading ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintTop_toBottomOf="@id/bottom_guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="64dp"
                android:paddingEnd="64dp"
                android:layout_margin="8dp"
                android:text="@string/str_change_password"
...
